--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "polymer": "^1.6.0",
     "component-list": "pancake-cms-component-list#*",
     "polymerfire": "firebase/polymerfire#^0.9.4",
-    "paper-button": "PolymerElements/paper-button#^1.0.12"
+    "paper-button": "PolymerElements/paper-button#^1.0.12",
+    "page-links": "pancake-cms-page-links#*"
   }
 }
